src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Active_Opps__c</fullName>
        <formula>Account.Active_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This contact&apos;s account has at least one active opportunity.</inlineHelpText>
        <label>Account Active Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Notes__c</fullName>
        <label>Assignment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asthma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asthma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Outcome_Note__c</fullName>
        <inlineHelpText>Please enter an explanation if you select &quot;Other - Remove from List&quot; or &quot;Other - Keep on List&quot; as the Last Call Outcome value.</inlineHelpText>
        <label>Call Outcome Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Priority__c</fullName>
        <label>Call Priority</label>
        <summarizedField>Call_List__c.Priority__c</summarizedField>
        <summaryFilterItems>
            <field>Call_List__c.Needs_Call__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_List__c.Patient__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <inlineHelpText>If the &quot;Last Call Outcome&quot; is set to &quot;Schedule Callback&quot; then select a Callback Date.</inlineHelpText>
        <label>Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Input_Relationship__c</fullName>
        <label>Client Input Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Client</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Previous Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple - Cupertino</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>HEB Cypress</fullName>
                </value>
                <value>
                    <fullName>HEB Rittiman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Congestive_Heart_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Congestive Heart Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <description>Select a source for the contact.</description>
        <inlineHelpText>Select a source for the contact.</inlineHelpText>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HLTH 19</fullName>
                </value>
                <value>
                    <fullName>Midtown Event 19 </fullName>
                </value>
                <value>
                    <fullName>OC Event 19</fullName>
                </value>
                <value>
                    <fullName>Bombora 20</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Nuture 1 - Awareness</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Nuture 2 - Advantage</fullName>
                </value>
                <value>
                    <fullName>Nuture 3 - Action</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coronary_Artery_Disease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coronary Artery Disease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Last Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voicemail 1</fullName>
                </value>
                <value>
                    <fullName>Voicemail 2</fullName>
                </value>
                <value>
                    <fullName>Scheduled Appointment</fullName>
                </value>
                <value>
                    <fullName>Has Current Appointment</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>Schedule Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drop_from_Lists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hidden field. Will toggle on and off.</inlineHelpText>
        <label>Drop from Lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMR__c</fullName>
        <description>Unique patient EMR identifier in Elation. Requested by Sarah L for Patient Referral Management project.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the unique EMR associated with this Contact.</inlineHelpText>
        <label>EMR</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Top_Cost__c</fullName>
        <label>ER Top Cost</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Visits_Last_6_Months__c</fullName>
        <label>ER Visits Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequent_ER_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frequent ER Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequent_Inpatient_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frequent Inpatient Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hypertension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hypertension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hypothyroidism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hypothyroidism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inpatient_Top_Cost__c</fullName>
        <label>Inpatient Top Cost</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inpatient_Visits_Last_6_Months__c</fullName>
        <label>Inpatient Visits Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Funding__c</fullName>
        <label>Insurance Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Funded</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PCP_Visit__c</fullName>
        <label>Last PCP Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linkedin_Profile__c</fullName>
        <label>Linkedin Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lumeris_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lumeris ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend all marketing activity when checked</description>
        <label>Marketing Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metro_Region__c</fullName>
        <label>Metro Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Expensive__c</fullName>
        <label>Most Expensive</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Call_Lists__c</fullName>
        <label>Number of Active Call Lists</label>
        <summaryFilterItems>
            <field>Call_List__c.Needs_Call__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Call_List__c.Waiting_Between_Calls__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_List__c.Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Chronic_Conditions__c</fullName>
        <label>Number of Chronic Conditions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obesity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obesity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <label>On Hold</label>
        <summaryFilterItems>
            <field>Call_List__c.Waiting_Between_Calls__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_List__c.Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Source_Info__c</fullName>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Note__c</fullName>
        <label>Patient Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Number_for_Import__c</fullName>
        <inlineHelpText>Hide. Used only for import (conversion of patient records to contact records)</inlineHelpText>
        <label>Patient Number for Import</label>
        <length>59</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_SF_ID_for_Import__c</fullName>
        <inlineHelpText>Hide. Only for import purposes</inlineHelpText>
        <label>Patient SF ID for Import</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreDiabetes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreDiabetes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Smoker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo_number__c</fullName>
        <formula>IF( Sync_to_Marketo__c = TRUE, 1, 0)</formula>
        <inlineHelpText>Used in DLRS for an account roll-up.</inlineHelpText>
        <label>Sync to Marketo #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Cost__c</fullName>
        <label>Top Cost</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UTM_Tracking__c</fullName>
        <description>UTM Tracking field</description>
        <label>UTM Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasLead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in reporting. Maps from the Lead to make this box TRUE.</inlineHelpText>
        <label>WasLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XO_Warehouse_ID__c</fullName>
        <externalId>true</externalId>
        <label>XO Warehouse ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_AQC_Date__c</fullName>
        <label>mkto_AQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_AQL_Date__c</fullName>
        <label>mkto_AQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Date__c</fullName>
        <inlineHelpText>Used in the Marketo integration.</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Program__c</fullName>
        <inlineHelpText>Used in the Marketo integration.</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
                <value>
                    <fullName>Stalling</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Lead_Score__c</fullName>
        <inlineHelpText>Used in the Marketo integration.</inlineHelpText>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_Lifecycle_Status__c</fullName>
        <label>Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>AQL</fullName>
                </value>
                <value>
                    <fullName>TAL</fullName>
                </value>
                <value>
                    <fullName>TQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Not a Lead</fullName>
                </value>
                <value>
                    <fullName>AQC</fullName>
                </value>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>SQC</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Lost-Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_Lost_Date__c</fullName>
        <label>mkto_Lost Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_MQL_Date__c</fullName>
        <label>mkto_MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_DateTime__c</fullName>
        <label>mkto_Opt-In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_Source_Detail__c</fullName>
        <label>mkto_Opt-In Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_Source__c</fullName>
        <label>mkto_Opt-In Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mkto_Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Source_Type__c</fullName>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Recycle_Date__c</fullName>
        <label>mkto_Recycle Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SAC_Date__c</fullName>
        <label>mkto_SAC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SAL_Date__c</fullName>
        <label>mkto_SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SQC_Date__c</fullName>
        <label>mkto_SQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SQL_Date__c</fullName>
        <label>mkto_SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Junk/spam</fullName>
                </value>
                <value>
                    <fullName>Went dark</fullName>
                </value>
                <value>
                    <fullName>Bad fit</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_TAC_Date__c</fullName>
        <label>mkto_TAC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TAL_Date__c</fullName>
        <label>mkto_TAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TQC_Date__c</fullName>
        <label>mkto_TQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TQL_Date__c</fullName>
        <label>mkto_TQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_UTM_Campaign__c</fullName>
        <label>mkto_UTM_Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_UTM_Medium__c</fullName>
        <label>mkto_UTM Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c),
    HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?mode=fullList&amp;view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; SUBSTITUTE(mkto_si__Last_Interesting_Moment_Desc__c,SUBSTITUTE($Label.mkto_si__system_newline, &quot;--linebreak--&quot;, &quot;&quot;),&quot; &quot;) ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Mkto_Lead_Score__c</fullName>
        <label>Mkto Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Contact_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zcrm_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>zcrm_Contact_Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Clients_Prospects</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Sync_to_Marketo__c</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Clients/Prospects</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contact_Management</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Contact Management</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>DOZISF__ZoomInfo_Last_Updated__c</field>
            <operation>equals</operation>
            <value>7/6/2021 12:00 AM</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>